--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clarifai": "^2.9.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "heroku": "^7.26.2",
     "knex": "^0.18.0",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0"
